--- a/BestBoQ/BestBoQ/theme/css/style.css
+++ b/BestBoQ/BestBoQ/theme/css/style.css
@@ -494,7 +494,7 @@ Cta
     padding: 30px 0;
     padding-bottom: 50px;
     border-top: 6px solid #8dc73f !important;
-    background: rgb(24, 26, 28) url(https://ununsplash.imgix.net/photo-1416339134316-0e91dc9ded92?q=75&fm=jpg&s=883a422e10fc4149893984019f63c818) no-repeat top center fixed;
+    background: rgb(24, 26, 28) url(../../Images/Default/home01.jpg) no-repeat top center fixed;
 }
 
     #cta-2 h2 {
