--- a/BestBoQ/BestBoQ/Main.Master
+++ b/BestBoQ/BestBoQ/Main.Master
@@ -347,7 +347,7 @@
                 </ul>--%>
                 <p>Copyright © 2018 <span style="color: #8dc73f;">NATURE ESTATE CO,.LTD </span>All Rights Reserved.</p>
                 <p><a href="mailto:info@natureestate.co.th">info@natureestate.co.th</a></p>
-                <p>085-445-4334 | 091-065-0090 | 087-951-1212 | 042-713-413</p>
+                <p>line:@bestboq</p>
                 <p>373/31 ถ.สกลนคร-กาฬสินธุ์ ต.ธาตุเชิงชุม อ.เมืองสกลนคร จ.สกลนคร 47000</p>
             </div>
         </div>
