--- a/BestBoQ/BestBoQ/theme/css/style.css
+++ b/BestBoQ/BestBoQ/theme/css/style.css
@@ -494,7 +494,7 @@ Cta
     padding: 30px 0;
     padding-bottom: 50px;
     border-top: 6px solid #8dc73f !important;
-    background: rgb(24, 26, 28) url(../../Images/Default/home01.jpg) no-repeat top center fixed;
+    background: rgb(24, 26, 28) url(../../Images/Default/bottom_page.jpg) no-repeat top center fixed;
     background-size: cover;
 }
 
