เก็บงานนิดหน่อย

--- a/BestBoQ/BestBoQ/Main.Master
+++ b/BestBoQ/BestBoQ/Main.Master
@@ -434,7 +434,7 @@
             showCompleteMessage('user ของท่านยังไม่ได้รับการอนุมัติ กรุณาติดต่อ bestboq ทีมครับผม');
         }
         else if (getUrlParameter("r") == "loginPermission") {
-            showCompleteMessage('รหัสไม่ถูกต้อง กรุณาลองอีกครั้ง หรือกดลืมรหัสผ่าน? เพื่อรีเซตรหัสผ่าน');
+            showCompleteMessage('Username หรือ Password ไม่ถูกต้อง กรุณาลองอีกครั้ง หรือกดลืมรหัสผ่าน? เพื่อรีเซตรหัสผ่าน');
         }
         else if (getUrlParameter("r") == "updateComplete") {
             showCompleteMessage('อัพเดทเสร็จเรียบร้อย');
@@ -442,20 +442,20 @@
                 window.location = 'Approve';
             })
         }
-        else if (getUrlParameter("r") == "statusModify") {
+        else if (getUrlParameter("r") == "statusPackage") {
 
             showCompleteMessage('ท่านสามารถพิมพ์เอกสารนี้ได้ เมื่อสมัครใช้ Premium Package คร้าบ');
             $('#completeModal').on('hidden.bs.modal', function (e) {
                 window.location = 'Project_Detail.aspx?id=' + getUrlParameter("id");
             })
         }
-        //else if (getUrlParameter("r") == "statusModify") {
+        else if (getUrlParameter("r") == "statusModify") {
 
-        //    showCompleteMessage('โครงการอยู่ระหว่างการดำเนินการ กรุณาประเมินโครงการก่อนพิมพ์เอกสาร');
-        //    $('#completeModal').on('hidden.bs.modal', function (e) {
-        //        window.location = 'Project_Detail.aspx?id=' + getUrlParameter("id");
-        //    })
-        //}
+            showCompleteMessage('กรุณากรอกข้อมูลโครงจนเสร็จสิ้น ก่อนพิมพ์เอกสารครับผม');
+            $('#completeModal').on('hidden.bs.modal', function (e) {
+                window.location = 'Project_Detail.aspx?id=' + getUrlParameter("id");
+            })
+        }
         else if (getUrlParameter("r") == "forgetComplete") {
             showCompleteMessage('เปลี่ยน Password เสร็จเรียบร้อย กรุณาตรวจสอบที่ email ของท่านที่ลงทะเบียนไว้');
         }
